blockade-1.20.27.36 (1.20.27.36) ubuntu; urgency=medium

  * Better changelog management.

 -- Michael L. Schaecher <mschaecher78@gmail.com>  Tue, 30 Jun 2020 10:26:51 -0600

blockade-1.20.6-24.11 (1.20.6-24.11) ubuntu; urgency=medium

  * Version bump.

 -- Michael L. Schaecher <mschaecher78@gmail.com>  Sat, 27 Jun 2020 18:12:08 -0600

blockade-1.20.6-24.11 (1.20.6-24.11) ubuntu; urgency=medium

  * Fixed: No such file or directory when resetting blockade update service.
  * Prevent the warning about The unit configuration chamges.
    - Systemd will throw a warning about service configation changes.
      Telling the user the  Run 'systemctl daemon-reload' so that the
      news changes can take effect. Otherwise, the previous configation
      well be used. 

 -- Michael L. Schaecher <mschaecher78@gmail.com>  Wed, 24 Jun 2020 00:07:16 -0600

blockade-1.20.6-24.10 (1.20.6-24.10) ubuntu; urgency=medium

  * Version bump.
  * Fix premission for /usr/bin/blockade (was not executable)

 -- Michael L. Schaecher <mschaecher78@gmail.com>  Tue, 23 Jun 2020 12:05:17 -0600

blockade-1.20.6-23.04 (1.20.6-23.04) ubuntu; urgency=medium

  * Rewritten enter blockade script.

 -- Michael L. Schaecher <mschaecher78@gmail.com>  Tue, 23 Jun 2020 11:50:20 -0600

blockade-1.20.6-22.1 (1.20.6-22.1) ubuntu; urgency=medium

  * Allow for user to set systemctl timer interval.

 -- Michael L. Schaecher <mschaecher78@gmail.com>  Mon, 22 Jun 2020 13:53:52 -0600

blockade-1.20.6-22 (1.20.6-22) ubuntu; urgency=medium

  * Enable logging when /etc/hosts is updated/changed.

 -- Michael L. Schaecher <mschaecher78@gmail.com>  Mon, 22 Jun 2020 13:46:58 -0600

blockade (1.0.1-9) ubuntu; urgency=medium

  * Display help info if unknow option is entered.

 -- Michael L. Schaecher <mschaecher78@gmail.com>  Sat, 18 Apr 2020 14:43:18 -0600

 blockade (1.0.0-5) ubuntu; urgency=medium

  * Set systemd timer to monthly
  * Using (unified + social + gambling + fakenews + porn) hosts by Steven Black
