@@ -1,7 +1,7 @@
 # Define how to construct the Blockade bash script.
 RELEASE = 1
 LEVEL = 20
-SUBLEVEL = 27.36
+SUBLEVEL = 63
 
 # Set version code and name.
 export VERSION = $(RELEASE).$(LEVEL).$(SUBLEVEL)
@@ -9,12 +9,13 @@ export NAME = blockade
 export NAME_VERSION = $(NAME)-$(VERSION)
 
 TMP = debian/$(NAME)
-DEBIAN = $(TMP)/DEBIAN
-SERVICE = $(TMP)/lib/systemd/system
-BLOCKADE = $(TMP)/usr/share/blockade
-DOC = $(TMP)/usr/share/doc/blockade
-APP = $(TMP)/usr/bin
-export TMP DEBIAN SERVICE BLOCKADE DOC APP
+DEBIAN = /DEBIAN
+SERVICE = /lib/systemd/system
+BLOCKADE = /usr/share/blockade
+DOC = /usr/share/doc/blockade
+LIB = /usr/lib/blockade
+APP = /usr/bin
+export TMP DEBIAN SERVICE BLOCKADE DOC LIB APP
 
 package:
 	make clean
@@ -24,3 +25,4 @@ clean:
 	rm -Rf debian
 
 install:
+	scripts/install
