@@ -1,0 +1,81 @@
+'\" t
+.\"     Title: blockade
+.\"    Author: Michael L. Schaecher
+.\"  Homepage: <https://github.com/mschaecher78/blockade/>
+.\"      Date: 01\ \&july\ \&2020
+.\"    Manual: blockade
+.\"    Source: blockade 0.9.5.0
+.\"  Language: English
+.\"
+.TH "BLOCKADE" "1" "09\ \&June\ \&2020"
+.\"
+.SH "NAME"
+.PP
+Blockade \- Update /etc/hosts file using Steven Black hosts project https://github.com/StevenBlack/hosts.
+.SH SYNOPSIS
+.PP
+blockade [ options ] [ options ]=date
+.SH DESCRIPTION
+.PP
+\fBblockade\fR,
+enables you to apply commonly know url's and websites that bad for you and your computer to the /etc/hosts
+file. The file is automaticaly updated on the backend with you having to worry.
+.PP
+.TP
+\fB-a, --edit=\fR
+Add url or website to the hosts file; example \fB--edit=www.badwebiste.com\fR.
+.TP
+\fB-m, --update\fR
+Manually update hosts using the current configurations. This option is ran automaticaly by systemd timer service.
+.TP
+\fB-i, --interval=date\fR
+Set the time when to update the hosts file. This can be daily, weekly, monthly or yearly; you can also set pick a
+specific date and time when this is done (example day-month-year-hour:minute), the default is monthly. See \fBSET
+INTERVAL\fR for more details.
+.TP
+\fB-c, --type\fR
+Show's a list of avialible hosts to download and install, the default is unified. See \fBHOSTS TYPE\fR for more details.
+.TP
+\fB-g, --info\fR
+Displays info according to systemctl.
+.TP
+\fB-h, --help\fR
+Displays blockade help info.
+.TP
+\fB-v, --version\fR
+Display blockade version.
+.PP
+.SH SET INTERVAL
+By defaul the hosts file is updated monthly, but this can be changed manually by running the command/'s below.
+.SH SIGNING
+.PP
+Signing either modules, or kernel \fBvmlinux-(version)\fR is straight forward. This can be done with a compiled kernel
+or installed one. \fBWARNING\fR: The kernel and modules must be signed with the same key type, otherwise you will
+see a warning about a none matching key. Signing a kernel binary also requires that the \fBinitram image\fR be rebuilt.
+See the man page for \fBinitramfs\fR for more details on how this is done.
+.PP
+blockade can also sign a single kernel module, this is useful for modules built outside of the main installed/compiled
+kernel. It is possible to sign efi binary images, but this is discouraged.
+.PP
+Signing binary kernel vmlinux image.
+.PP
+\fB	blockade --image --path=/path/to/vmlinux-(version)\fR
+.PP
+Signing single module build outside of main installed kernel.
+.PP
+\fB	blockade --module --path=/path/to/(module binary)\fR
+.PP
+Signing all modules.
+.PP
+\fB	blockade --modules-all --path/path/to/module/kernel-(version)/directory
+.PP
+Signing with a different key if key was not generated with blockade and one is alread register to shim.
+.PP
+\fB	blockade --(image, module, modules-all) --key-private=/path/to/(private key) --key-public=/path/to/(public key)
+.PP
+.SH ALSO SEE
+.PP
+\fBsbsign\fR,
+\fBkmodsign\fR,
+\fBopenssl\fR and
+\fBmokutil\fR.
