@@ -17,98 +17,67 @@
 # with this program; if not, write to the Free Software Foundation, Inc.,
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 
-set -e
+function missing_config () {
 
+echo "Missing /usr/lib/blockade/blockade.config"
 
-HOST="/usr/share/blockade/hosts"		# List of links.
-NAME="/usr/share/blockade/name"			# What type of hosts file to use.
-LINK="/usr/share/blockade/link"			# Where to grab the hosts.
-
-# Use systemctl --list-timers to to show when the hosts file was
-# last updated.
-LAST=$(systemctl list-timers --all | grep 'blockade' | awk -F' ' '{print $8,$9,$10}')
-if [ "${LAST}" == "" ] ; then
-	LAST="n/a"
+# Create directory if missing for some reason.
+if [ ! -d /usr/lib/blockade ] ; then
+	mkdir -p /usr/lib/blockade
 fi
 
-# Show the status of blockade.
-STATUS=$(systemctl status blockade-hosts-update.timer | awk -F' ' 'NR==3 {print $2,$3}')
+echo "Reverting to default configuration"
 
-DATE=$(date -R)					# Get the UTC date anytime this script is called.
+cat <<EOF > ${CONFIG}
+# This file is generated and updated by blockade, see the
+# manpage for more details.
 
-# Usage for blockade.
-USAGE="blockade ${VERSION} (hosts)
-Useage = blockade [option]
+# Link to download hosts file.
+export LINK="http://sbc.io/hosts/hosts"
+# Name/type of hosts file (Unified is the default).
+export NAME="Unified"
+# How offend to update the /etc/hosts, (default is monthly).
+export INTERVAL="monthly"
+EOF
 
-    --update			Installs new hosts file based on what the has be set by the system
-				admin. This can be done manual.
-    --interval=date		How offend to update (systemd required). See man page for details.
-    --type			Displays a list of avialible hosts file.
-    --info			Display the hosts file type, download link and last time /etc/hosts
-				was update.
-    --help			Show these quick tips.
-    --version			Displays program name and version.
+source ${CONFIG}
 
-blockade homepage: <https://www.github.com/mschaecher78/blockade/>
-Copyright (C) 2020 <Michael L. Schaecher> GPL v2
-"
-# Start of /etc/hosts file header
-HEADER="# Hosts generated by $(hostname)@$(users) on ${DATE}
-#
-# Type: $(cat /usr/share/blockade/name)
-#
-# This hosts file is updated and is sourced from Steven Black hosts
-# github page. If you come accross any links that you feel should be
-# add, feel free to contact me or Mr. Black on github.
-#
-# https://github.com/mschaecher78/blockade/issues
-# or
-# https://github.com/StevenBlack/hosts/issues
-#
-# localhost @ 127.0.0.1
-# redirect  @ 0.0.0.0
-#
-
-127.0.0.1 localhost
-127.0.0.1 localhost.localdomain
-127.0.0.1 local
-255.255.255.255 broadcasthost
-::1 localhost
-::1 ip6-localhost
-::1 ip6-loopback
-fe80::1%lo0 localhost
-ff00::0 ip6-localnet
-ff00::0 ip6-mcastprefix
-ff02::1 ip6-allnodes
-ff02::2 ip6-allrouters
-ff02::3 ip6-allhosts
-0.0.0.0 0.0.0.0
-
-# Place website's below that you wish to block.
-"
-# End of /etc/hosts file header
-
-INFO="blockade - version ${VERSION}
+echo "
+blockade - version ${VERSION}
 
 Host:   /etc/hosts
-Type:   $(cat ${NAME})
+Type:   ${NAME}
+Link:	${LINK}
 Status: ${STATUS}
-date:   ${LAST}
+Update: ${LAST}
 "
+exit 1
 
-set_interval () {
+}
 
-if echo "${DATE}" > interval ; then
-	echo "Setting: update interval ${DATE}"
-fi
+function set_interval () {
 
-# Disable the timer service to prevent error.
-if ! which systemctl >/dev/null 2>&1 ; then
-	systemctl disable blockade-hosts-update.timer
-	echo "Error: failed to restart service!"
-	exit 1
+if sed "s/export INTERVAL=\"${INTERVAL}\"/export INTERVAL=\"${WHEN}\"/g" \
+scr/doc/blockade.conf > scr/doc/blockade.conf.new ; then
+
+	echo "Update On: ${DATE}"
+	mv -f scr/doc/blockade.conf.new scr/doc/blockade.conf
+	# Since blockade's configuration was rewritten the file's premissions
+	# need to be fixed.
+	chmod 0755 scr/doc/blockade.conf
+
+	# Disable the timer service to prevent error.
+	if ! which systemctl >/dev/null 2>&1 ; then
+		systemctl disable blockade-hosts-update.timer
+		echo "Error: failed to restart service!"
+		exit 1
+	else
+		echo "Disabling: blockade-hosts-update.timer"
+	fi
+
 else
-	echo "Disabling: blockade-hosts-update.timer"
+	echo "Error: unable to update interval!"
+	exit 1
 fi
 
 # Rewrite the systemctl scripts.
@@ -159,52 +128,163 @@ fi
 
 }
 
-set_type () {
+function set_type () {
 
-read -p "List of avialable hosts files from Steven Black
+# /usr/share/blockade/type-info is used for avialible hosts and to generate
+# new blockade.conf file.
+read -p "List of avialible hosts configuration.
 
-	1)	unified
-	2)	unified-fakenews
-	3)	unified-gambling
-	4)	unified-porn
-	5)	unified-social
-	6)	unified-fakenews-gambling
-	7)	unified-fakenews-porn
-	8)	unified-fakenews-social
-	9)	unified-gambling-porn
-	10)	unified-gambling-social
-	11)	unified-porn-social
-	12)	unified-fakenews-gambling-porn
-	13)	unified-fakenews-gambling-social
-	14)	unified-fakenews-porn-porn
-	15)	unified-gambling-porn-social
-	16)	unified-fakenews-gambling-porn-social
+$(cat ${HOST} | awk -F';' '{print $1,"\t"$2}')
 
-Enter option: " CHOISE
+Choise option [ press enter to keep \"${NAME}\" ]: " CHOISE
 
 case ${CHOISE} in
 	[0-9]|10|11|12|13|14|15|16)
-		GET_LINK=$(cat ${HOST} | awk "NR==${CHOISE} {print}")
 
-		if [ "${CHOISE}" == "1" ] ; then
-			SET_NAME="unified"
+		# Need to capture the selected choise and print into a tempary file.
+		cat ${HOST} | awk "NR==${CHOISE} {print}" > /tmp/blockade-type.txt
+
+		# Set variable for the new name.
+		GET_NAME=$(cat /tmp/blockade-type.txt | awk -F';' '{print $2}')
+		GET_LINK=$(cat /tmp/blockade-type.txt | awk -F';' '{print $3}')
+
+		echo "Setting name to \"${GET_NAME}\""
+		sed "s/\"${NAME}\"/\"${GET_NAME}\"/g" ${CONFIG} > /tmp/blockade.conf.tmp
+
+		echo "Setting name to \"${GET_LINK}\""
+
+		if sed "s+${LINK}+${GET_LINK}+g" /tmp/blockade.conf.tmp > ${CONFIG} ; then
+			rm -f /tmp/blockade*
+			exit 0
 		else
-			SET_NAME=$(echo "${GET_LINK}" | awk -F"/" '{print $6}')
+			echo "Error: unable to update configuration!"
+			exit 1
 		fi
 
-		echo "Hosts: ${SET_NAME}"
-		echo "Link:  ${GET_LINK}"
-		echo "${GET_LINK}" > /usr/share/blockade/link
-		echo "${SET_NAME}" > /usr/share/blockade/name
+
 	;;
-	*)	echo "'${CHOISE}' Unknow options!" && exit 1 ;;
+	*) echo "'${CHOISE}' Unknow options!" && exit 1 ;;
+	"") echo "Doing nothing!" && exit 0 ;;
 esac
 
 exit 0
 
 }
 
-GETOPT=$(getopt -n blockade -o '' -l 'update,help,version,type,info,interval:' -- $@)
+function show_info () {
+echo "blockade - version ${VERSION}
+
+Host:   /etc/hosts
+Type:   ${NAME}
+Link:	${LINK}
+Status: ${STATUS}
+Update: ${LAST}
+"
+}
+
+function update_hosts () {
+cat <<EOF > /etc/hosts
+# Hosts generated by $(hostname)@$(users) on ${DATE}
+#
+# Type: $(cat /usr/share/blockade/name)
+#
+# This hosts file is updated and is sourced from Steven Black hosts
+# github page. If you come accross any links that you feel should be
+# add, feel free to contact me or Mr. Black on github.
+#
+# https://github.com/mschaecher78/blockade/issues
+# or
+# https://github.com/StevenBlack/hosts/issues
+#
+# localhost @ 127.0.0.1
+# redirect  @ 0.0.0.0
+#
+
+127.0.0.1 localhost
+127.0.0.1 localhost.localdomain
+127.0.0.1 local
+255.255.255.255 broadcasthost
+::1 localhost
+::1 ip6-localhost
+::1 ip6-loopback
+fe80::1%lo0 localhost
+ff00::0 ip6-localnet
+ff00::0 ip6-mcastprefix
+ff02::1 ip6-allnodes
+ff02::2 ip6-allrouters
+ff02::3 ip6-allhosts
+0.0.0.0 0.0.0.0
+
+# Begin ${NAME}.
+EOF
+
+sleep 0.5	# Allow time for the user to see what is going on.
+
+echo "Downloading: ${LINK}"
+# Download the selected hosts. Exit if there is an error.
+if ! wget -O - -cq  ${LINK} | awk 'NR < 40{next}1' | grep '0.0.0.0' >> /etc/hosts ; then
+	echo "Error: unable to update hosts" && exit 1
+else
+	sleep 0.5 && echo "Install: ${NAME} /etc/hosts file."
+
+	if [ -f ${CUSTOM_LINKS} ] ; then
+		cat ${CUSTOM_LINKS} >> /etc/hosts
+	fi
+
+	# Restart NetworkManager.
+	if systemctl restart NetworkManager.service ; then
+		sleep 7 && echo "Finished :)" && exit 0
+	else
+		echo "Error: failed to restart NetworkManager!" && exit 1
+	fi
+fi
+
+}
+
+set -e
+
+
+HOST="/usr/share/blockade/type-info"		# Name/type url download link.
+
+# Use systemctl --list-timers to to show when the hosts file was last updated.
+LAST=$(systemctl list-timers --all | grep 'blockade' | awk -F' ' '{print $8,$9,$10}')
+if [ "${LAST}" == "" ] ; then
+	LAST="n/a"
+fi
+
+# Show the status of blockade.
+STATUS=$(systemctl status blockade-hosts-update.timer | awk -F' ' 'NR==3 {print $2,$3}')
+if [ "${STATUS}" == "" ] || [ "${STATUS}" == "inactive (dead)" ] ; then
+	STATUS="dead"
+fi
+
+DATE=$(date -R)					# Get the UTC date anytime this script is called,
+						# but only use if updating the hosts file.
+
+CONFIG="/usr/lib/blockade/blockade.conf"	# Configuration file, this is needed.
+
+# File use if custom links are add.
+CUSTOM_LINKS="cat /lib/blockade/user-added-links"
+
+# Usage for blockade.
+USAGE="blockade ${VERSION} (hosts)
+Useage = blockade [option]
+
+    --edit			Manually edit /etc/hosts file.
+    --update			Installs new hosts file based on what the has be set by the system
+				admin. This can be done manual.
+    --interval=date		How offend to update (systemd required). See man page for details.
+    --type			Displays a list of avialible hosts file.
+    --info			Display the hosts file type, download link and last time /etc/hosts
+				was update.
+    --help			Show these quick tips.
+    --version			Displays program name and version.
+
+blockade homepage: <https://www.github.com/mschaecher78/blockade/>
+Copyright (C) 2020 <Michael L. Schaecher> GPL v2
+"
+
+GETOPT=$(getopt -n blockade -o '' -l 'update,help,version,type,info,edit:,interval:' -- $@)
 
 eval set -- "${GETOPT}"
 
@@ -215,6 +295,8 @@ if [ "${EUID}" -ne 0 ] ; then
 		echo "${USAGE}"
 	elif [ "${1}" == "--version" ] ; then
 		echo "blockade ${VERSION}"
+	elif [ "${1}" == "--info" ] ; then
+		show_info
 	else
 		echo "blockade requires root access!"
 	fi
@@ -223,62 +305,34 @@ elif [ "${EUID}" -ne 1 ] ; then
 
 	while true ; do
 
+		if [ -f ${CONFIG} ] ; then source  ${CONFIG} ; else missing_config ; fi
+
+
 		case "${1}" in
-			--update)
-				# Error if file is empty or doesn't exist, but fallback
-				# to the default hosts file and exit.
-				if [ "${LINK}" == "" ] ; then
-
-					if ! echo "${HEADER}" > /etc/hosts ; then
-						echo "Error: failed to install /etc/hosts header"
-					else
-						echo "Error: ${LINK} is empty or missing fallingback to default!"
-						echo "	Run \"sudo blockade --type=\" to fix this."
-					fi
-
-					exit 1
-				fi
-
-				echo "Building new hosts file"
-				# Normally EOF would be used to push the header to the
-				# file, but it doesn't like whitespace.
-				if ! echo "${HEADER}" > /etc/hosts ; then
-					echo "Error: failed to install /etc/hosts header"
-					exit 1
-				fi
-
-				sleep 0.5 # Allow time for the user to see what is going on.
-
-				echo "Downloading: $(cat ${LINK})"
-				# Download the selected hosts. Exit if there is an error.
-				if ! wget -O - -cq  $(cat ${LINK}) | awk 'NR < 40{next}1' |
-				grep '0.0.0.0' >> /etc/hosts ; then
-					echo "Error: unable to update hosts"
-					exit 1
-				else
-					sleep 0.5
-					echo "Install: $(cat ${NAME}) /etc/hosts file."
-					# Restart NetworkManager.
-					if systemctl restart NetworkManager.service ; then
-						sleep 7 && echo "Finished :)"
-
-					else
-						echo "Error: failed to restart NetworkManager!"
-						exit 1
-					fi
-				fi
-
-				echo "$(date -R)" > /usr/share/blockade/updated
-
-				exit 0
-			;;
+			--update) update_hosts;;
 			--interval) shift && WHEN="${1}" && set_interval ;;
-			--type) shift && TYPE="${1}" && set_type ;;
+			--type) set_type ;;
 			--help) echo "${USAGE}" ;;
 			--version) echo "blockade ${VERSION}" ;;
-			--info)
-				echo "${INFO}"
-				exit 0 ;;
+			--info) show_info;;
+			--edit)
+				shift && echo "Adding: ${1} to /etc/hosts"
+
+				# Create a backup file so that when the hosts is
+				# updated then links that was add by the user doesn't
+				# have to be reenterd.
+				#
+				# The update should be painless.
+				echo "${1}" >> /lib/blockade/user-added-links
+
+				if cat ${CUSTOM_LINKS} >> /etc/hosts ; then
+					exit 0
+				else
+					echo "Error: failed to edit /etc/hosts"
+					exit 1
+				fi
+
+			;;
 			--) shift && break ;;
 		esac && shift
 
