@@ -1,0 +1,9 @@
+# This file is generated and updated by blockade, see the
+# manpage for more details.
+
+# Link to download hosts file.
+export LINK="http://sbc.io/hosts/hosts"
+# Name/type of hosts file (Unified is the default).
+export NAME="Unified"
+# How offend to update the /etc/hosts, (default is monthly).
+export INTERVAL="monthly"
