@@ -1,16 +1,0 @@
-http://sbc.io/hosts/hosts
-http://sbc.io/hosts/alternates/fakenews/hosts
-http://sbc.io/hosts/alternates/gambling/hosts
-http://sbc.io/hosts/alternates/porn/hosts
-http://sbc.io/hosts/alternates/social/hosts
-http://sbc.io/hosts/alternates/fakenews-gambling/hosts
-http://sbc.io/hosts/alternates/fakenews-porn/hosts
-http://sbc.io/hosts/alternates/fakenews-social/hosts
-http://sbc.io/hosts/alternates/gambling-porn/hosts
-http://sbc.io/hosts/alternates/gambling-social/hosts
-http://sbc.io/hosts/alternates/porn-social/hosts
-http://sbc.io/hosts/alternates/fakenews-gambling-porn/hosts
-http://sbc.io/hosts/alternates/fakenews-gambling-social/hosts
-http://sbc.io/hosts/alternates/fakenews-porn-social/hosts
-http://sbc.io/hosts/alternates/gambling-porn-social/hosts
-http://sbc.io/hosts/alternates/fakenews-gambling-porn-social/hosts
