@@ -1,1 +1,0 @@
-http://sbc.io/hosts/hosts
