@@ -6,6 +6,10 @@ set -e
 
 case "$1" in
     configure)
+    	echo "fixing premissions"
+    	chown -R root:root /usr/bin/blockade /usr/lib/blockade \
+    		/lib/systemd/system/blockade-hosts-update.* \
+    		/usr/doc/blockade
         if which systemctl >/dev/null 2>&1
         then
             systemctl enable blockade-hosts-update.timer || true
@@ -25,5 +29,3 @@ esac
 # generated by other debhelper scripts.
 
 exit 0
-
-
