@@ -1,0 +1,35 @@
+#!/bin/bash
+
+set -e
+
+APP="/usr/bin"
+SERVICE="/lib/systemd/system"
+DOC="/usr/share/doc/blockade"
+BLOCKADE="/usr/share/blockade"
+
+if ! sed "22iVERSION=${VERSION}" scr/blockade > ${APP}/blockade ; then
+	echo "Error: failed to install ${APP}/blockade"
+	exit 1
+else
+	echo "installing:  ${APP}/blockade"
+
+	if ! cp -f scr/blockade-hosts-update.* ${SERVICE}/ > /dev/null ; then
+		echo "Error: failed to install ${SERVICE}/blockade-hosts-update.timer"
+		echo "Error: failed to install ${SERVICE}/blockade-hosts-update.service"
+		exit 1
+	else
+		echo "installing:  ${SERVICE}/blockade-hosts-update.timer"
+		echo "installing:  ${SERVICE}/blockade-hosts-update.service"
+	fi
+
+	cp -vf scr/doc/* ${BLOCKADE}/
+
+	# Copy and conpress changelog.
+	if ! cp -vf changelog copyright ${DOC}/ ; then
+		echo "Missing: ${DOC} && ${SERVICE}" && exit 1
+	else
+		if ! gzip -9 -vf ${DOC}/changelog ; then
+			echo "Error" && exit 1
+		fi
+	fi
+fi
